# miso-darkcraw

./: .envrc  .gitignore  CHANGELOG.md  LICENSE.md  README.md  dev-requirements.txt  pre-commit.py
.github/workflows/: build.yml  ci.yml  lint.yml  tests.yml
app/: .ghcid  .hlint.yaml  Board.hs  Card.hs  Constants.hs  Event.hs  Game.hs  Json.hs  Main.hs  Model.hs  README.md  Test.hs  Update.hs  Utils.hs  View.hs  ViewInternal.hs  app.cabal  cabal-haddock.config  cabal.config  data.json  default.nix  hie.yaml  judge.sh  load-n-reload.sh  open-nvim  shell.nix
app/client/: BuildView.hs  Cinema.hs  Configuration.hs  Custom.hs  Debugging.hs  DeckView.hs  Flavor.hs  GameView.hs  GameViewInternal.hs  LootView.hs  Main.hs  Movie.hs  MultiPlayerLobbyView.hs  PCWViewInternal.hs  Projector.hs  Roads.hs  SinglePlayerLobbyView.hs  View.hs  ViewBlocks.hs  ViewInternal.hs  WelcomeView.hs  WorldView.hs
app/judge/: Main.hs
app/server/: Main.hs
app/shared/: AI.hs  AI.hs-boot  Art.hs  Ascii.hs  Board.hs  BoardInstances.hs  Campaign.hs  Card.hs  CardInstances.hs  Cinema.hs  Color.hs  Command.hs  ConcreteAI.hs  Constants.hs  Contains.hs  Damage.hs  Debugging.hs  Direction.hs  Effect.hs  Event.hs  Exprs.hs  Game.hs  HeuristicAI.hs  Json.hs  JsonData.hs  MCTSAI.hs  Mana.hs  Mechanics.hs  Model.hs  Move.hs  Movie.hs  Nat.hs  Network.hs  Random.hs  Roads.hs  ServerMessages.hs  Shared.hs  SharedModel.hs  Skill.hs  Spots.hs  (+5 more)
app/test/: Balance.hs  Generators.hs  Invariants.hs  Logic.hs  Main.hs  Match.hs  Pretty.hs  SceneEquivalence.hs  Test.hs  TestLib.hs  Weight.hs
app/updb/: Main.hs
docs/: AI.html  Art.html  Board.html  BoardInstances.html  BuildView.html  Campaign.html  Card.html  CardInstances.html  Cinema.html  Color.html  Command.html  ConcreteAI.html  Configuration.html  Constants.html  Contains.html  Damage.html  Debugging.html  DeckView.html  Direction.html  Effect.html  Event.html  Exprs.html  Game.html  GameView.html  GameViewInternal.html  HeuristicAI.html  Json.html  JsonData.html  LootView.html  MCTSAI.html  Main.html  Mana.html  Mechanics.html  Model.html  Move.html  Movie.html  MultiPlayerLobbyView.html  Nat.html  Network.html  PCWViewInternal.html  (+55 more)
hooks/: pre-commit.py  pre-push  pre_commit.py  requirements.txt
scripts/: DisplayBoard.hs  GenAssets.hs  Roads.hs  change-config.sh  check-imports.sh  dl-large-assets.sh  gen-assets.py  install-hls.sh  itch-push.sh  shellcheck.sh
th/: Main.hs  data.json  main.py  package.yaml  stack.yaml
tiled/: README.md  blue_slot.tmx  build.tmx  dark-forest-hand.tmx  dark-forest.tmx  deck.tmx  dungeon-hand.tmx  dungeon.tmx  errbox.tmx  forest-hand.tmx  forest.tmx  hand.tmx  loot.tmx  lose.tmx  moss-dungeon-board.tmx  moss-dungeon-hand.tmx  moss-dungeon-turn.tmx  oryx_16bit_fantasy_creatures_trans.tsx  oryx_16bit_fantasy_world_trans.tsx  red_slot.tmx  round-trees-forest-spell.tmx  singleplayer.tmx  turn-dark-forest.tmx  turn-dungeon.tmx  turn.tmx  welcome.tmx  win.tmx  world.tmx
xcf/: README.md  card-bg.xcf
