cabal-version: 2.2
name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
extra-source-files:
  assets/*.png

common client-server-shared
  other-modules:
    AI
    Board
    BoardInstances
    Campaign
    Card
    CardInstances
    Constants
    Debugging
    Event
    Game
    JsonData
    Json
    Model
    Nat
    ServerMessages
    SharedModel
    Tile
    Total
    Turn
    Update
  build-depends:
    aeson,
    ansi-wl-pprint,
    base,
    bytestring,
    containers,
    extra,
    freer-simple,
    generic-lens,
    ilist,
    lens,
    miso,
    MonadRandom,
    mtl,
    operational,
    pretty-simple,
    random,
    random-shuffle,
    text,
    tree-diff,
    vector
  ghc-options:
    -Wall
    -Werror
    -Wwarn=missing-home-modules
  default-language:
     Haskell2010

executable server
  import: client-server-shared
  if impl(ghcjs)
    buildable: False
  hs-source-dirs:
    server,
    shared
  main-is:
    Main.hs
  build-depends:
    websockets

executable app
  import: client-server-shared
  main-is:
    Main.hs
  other-modules:
    BuildView
    Cinema
    Command
    Configuration
    DeckView
    GameView
    GameViewInternal
    Movie
    MultiPlayerLobbyView
    PCWViewInternal
    SinglePlayerLobbyView
    View
    ViewBlocks
    ViewInternal
    WelcomeView
  hs-source-dirs:
    client,
    shared
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror
    -Wwarn=missing-home-modules
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers,
        wai,
        wai-app-static,
        warp,
        websockets

Test-Suite test-darkcraw
  if impl(ghcjs)
    buildable: False
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  other-modules:
    AI
    Balance
    Board
    BoardInstances
    Campaign
    Card
    CardInstances
    Cinema
    Command
    Constants
    Game
    Generators
    Invariants
    Json
    JsonData
    Logic
    Match
    Model
    Movie
    Nat
    Pretty
    SceneEquivalence
    ServerMessages
    SharedModel
    TestLib
    Tile
    Total
    Turn
    Update
  hs-source-dirs:
    shared,
    test
  build-depends:
    aeson,
    ansi-wl-pprint,
    base >= 4 && < 5,
    bytestring,
    containers,
    extra,
    freer-simple,
    generic-lens,
    generic-random,
    hspec,
    ilist,
    lens,
    miso,
    MonadRandom,
    mtl,
    operational,
    QuickCheck,
    pretty-simple,
    random,
    random-shuffle,
    text,
    tree-diff,
    vector
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror
    -Wwarn=missing-home-modules
    -fprof-auto
    -prof
    -rtsopts
  default-language:
     Haskell2010
