cabal-version: 2.2
name:                app
version:             0.1.0.0
homepage:            https://github.com/smelc/miso-darkcraw
synopsis:            Pixel Card Wars
category:            Game
license:             Unlicense
build-type:          Simple
extra-source-files:
  assets/*.png
description:         Pixel Card Wars is a strategy cards game. Choose your team and walks up the path of the fame in the single player campaign, or bring a friend and play a best of 3/5/7 games. You progressively build your deck after each game.

common client-server-shared
  other-modules:
    AI
    Board
    BoardInstances
    Campaign
    Card
    CardInstances
    Constants
    Event
    Game
    JsonData
    Json
    Model
    Nat
    ServerMessages
    SharedModel
    Skill
    Tile
    Total
    Turn
    Update
  build-depends:
    aeson,
    ansi-wl-pprint,
    base,
    bytestring,
    containers,
    extra,
    freer-simple,
    generic-lens,
    ilist,
    lens,
    miso,
    MonadRandom,
    mtl,
    operational,
    pretty-simple,
    random,
    random-shuffle,
    text,
    tree-diff,
    vector
  ghc-options:
    -haddock
    -Wall
    -Werror
    -Wwarn=missing-home-modules
  default-language:
     Haskell2010

executable server
  import: client-server-shared
  if impl(ghcjs)
    buildable: False
  hs-source-dirs:
    server,
    shared
  main-is:
    Main.hs
  build-depends:
    websockets

executable app
  import: client-server-shared
  main-is:
    Main.hs
  other-modules:
    Cinema
    Command
    Configuration
    Debugging
    DeckView
    GameView
    GameViewInternal
    LootView
    Movie
    MultiPlayerLobbyView
    PCWViewInternal
    SinglePlayerLobbyView
    View
    ViewBlocks
    ViewInternal
    WelcomeView
  hs-source-dirs:
    client,
    shared
  ghc-options:
    -haddock
    -Wall
    -Wno-name-shadowing
    -Werror
    -Wwarn=missing-home-modules
  if !impl(ghcjs)
    build-depends:
       jsaddle, jsaddle-warp, transformers,
        wai,
        wai-app-static,
        warp,
        websockets

Test-Suite test-darkcraw
  if impl(ghcjs)
    buildable: False
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  other-modules:
    AI
    Balance
    Board
    BoardInstances
    Campaign
    Card
    CardInstances
    Cinema
    Command
    Constants
    Game
    Generators
    Invariants
    Json
    JsonData
    Logic
    Match
    Model
    Movie
    Nat
    Pretty
    SceneEquivalence
    ServerMessages
    SharedModel
    Skill
    TestLib
    Tile
    Total
    Turn
    Update
  hs-source-dirs:
    shared,
    test
  build-depends:
    aeson,
    ansi-wl-pprint,
    base >= 4 && < 5,
    bytestring,
    containers,
    extra,
    freer-simple,
    generic-lens,
    generic-random,
    hspec,
    ilist,
    lens,
    miso,
    MonadRandom,
    mtl,
    operational,
    QuickCheck,
    pretty-simple,
    random,
    random-shuffle,
    text,
    tree-diff,
    vector
  ghc-options:
    -haddock
    -Wall
    -Wno-name-shadowing
    -Werror
    -Wwarn=missing-home-modules
    -fprof-auto
    -prof
    -rtsopts
  default-language:
     Haskell2010
