cabal-version: 2.2
name:                app
version:             0.1.0.0
homepage:            https://github.com/smelc/miso-darkcraw
synopsis:            Pixel Card Wars
category:            Game
license:             Unlicense
build-type:          Simple
extra-source-files:
  assets/*.png
description:         Pixel Card Wars is a strategy cards game. Choose your team and walks up the path of the fame in the single player campaign, or bring a friend and play a best of 3/5/7 games. You progressively build your deck after each game.

common common-all
  default-language:
     Haskell2010
  build-depends:
    aeson,
    ansi-wl-pprint,
    base >= 4 && < 5,
    bytestring,
    containers,
    extra,
    freer-simple,
    generic-lens,
    ilist,
    lens,
    miso,
    MonadRandom,
    mtl,
    operational,
    pretty-simple,
    random,
    random-shuffle,
    text,
    tree-diff,
    vector
  other-modules:
    AI
    Art
    Board
    BoardInstances
    Campaign
    Card
    CardInstances
    Cinema
    Command
    Constants
    Damage
    Event
    Game
    Json
    JsonData
    Model
    Movie
    Nat
    ServerMessages
    SharedModel
    Skill
    Spots
    Tile
    Total
    Turn
    Update
  ghc-options:
    -haddock
    -Wall
    -Wno-name-shadowing
    -Werror
    -Wwarn=missing-home-modules

executable server
  import: common-all
  if impl(ghcjs)
    buildable: False
  hs-source-dirs:
    server,
    shared
  main-is:
    Main.hs
  build-depends:
    websockets

executable app
  import: common-all
  main-is:
    Main.hs
  hs-source-dirs:
    client,
    shared
  other-modules:
    Configuration
    Debugging
    DeckView
    GameView
    GameViewInternal
    LootView
    MultiPlayerLobbyView
    PCWViewInternal
    SinglePlayerLobbyView
    View
    ViewBlocks
    ViewInternal
    WelcomeView
  if !impl(ghcjs)
    build-depends:
       jsaddle,
       jsaddle-warp,
       transformers,
       wai,
       wai-app-static,
       warp,
       websockets

Test-Suite test-darkcraw
  import: common-all
  if impl(ghcjs)
    buildable: False
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  hs-source-dirs:
    shared,
    test
  other-modules:
    Balance
    Generators
    Invariants
    Logic
    Match
    Pretty
    SceneEquivalence
    TestLib
    Weight
  build-depends:
    generic-random,
    hspec,
    QuickCheck
  ghc-options:
    -fprof-auto
    -prof
    -rtsopts

executable updb
  import: common-all
  if impl(ghcjs)
    buildable: False
  hs-source-dirs:
    updb,
    shared,
    test
  main-is:
    Main.hs
  other-modules:
    Balance
    Generators
    Match
    TestLib
    Weight
  build-depends:
    generic-random,
    hspec,
    QuickCheck,
    shelly

